Added edit and save functionality to promotion overview page.
git-svn-id: file:///var/svn/claro-catalog@175 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -14,7 +14,14 @@ inheritedProperties=Inherited Properties
 newProduct=New Product
 noProductsInGroup=No products in this group
 backToProductOverview=&laquo; Back to product overview
+
 explainNavigationList=The list below are the top level product groups used as the starting point for the navigation structure in the webshop.
+
+promotionSaved=Promotion saved.
+productSaved=Product saved.
+productGroupSaved=Group {0} saved.
+navigationSaved=Navigation changes saved.
+fileUploaded=File {0} uploaded.
 
 name=Name
 type=Type
