--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -3,6 +3,7 @@ add=Add
 catalog=Catalog
 navigation=Navigation
 promotions=Promotions
+orders=Orders
 settings=Settings
 todo=<h3>To be Configured. Pending Customer Requirements.</h3>
 products=Products
@@ -18,15 +19,19 @@ loading=Loading...
 upload=Upload...
 uploadFile=Upload file
 deletePromotionQuestion=Do you want to delete the promotion?
- 
-explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
+deletePropertyQuestion=Do you want to delete the Property? (Save Group to commit changes).
+propertiesFrom=Properties from {0}
+save=Save
 
+explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
+explainLanguages=The following languages are the languages present to customers to show the webshop. 
 promotionSaved=Promotion saved.
 promotionDeleted=Promotion deleted.
 productSaved=Product saved.
 productGroupSaved=Group {0} saved.
 navigationSaved=Navigation changes saved.
 fileUploaded=File {0} uploaded.
+languagesSaved=Languages updated.
 
 name=Name
 type=Type
