--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -20,18 +20,25 @@ upload=Upload...
 uploadFile=Upload file
 deletePromotionQuestion=Do you want to delete the promotion?
 deletePropertyQuestion=Do you want to delete the Property? (Save Group to commit changes).
+deleteProductQuestion=Do you want to delete the product?
 propertiesFrom=Properties from {0}
 save=Save
+cancel=Cancel
+ok=Ok
+noValue=<no value>
 
 explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
 explainLanguages=The following languages are the languages present to customers to show the webshop. 
+explainEnums=Manage the enumeration list. 
 promotionSaved=Promotion saved.
 promotionDeleted=Promotion deleted.
 productSaved=Product saved.
+productDeleted=Product deleted.
 productGroupSaved=Group {0} saved.
 navigationSaved=Navigation changes saved.
 fileUploaded=File {0} uploaded.
 languagesSaved=Languages updated.
+editEnumTitle=Click to add/remove enums fields.
 
 name=Name
 type=Type
