- Added basic implementation of "related to". - Refactored displaying of product group properties and other attributes. - Added crud/query methods for order class.
git-svn-id: file:///var/svn/claro-catalog@207 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -26,6 +26,9 @@ save=Save
 cancel=Cancel
 ok=Ok
 noValue=<no value>
+properties=Properties
+parents=Parents
+relatedTo=Related To
 
 explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
 explainLanguages=The following languages are the languages present to customers to show the webshop. 
