--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -29,6 +29,12 @@ noValue=<no value>
 properties=Properties
 parents=Parents
 relatedTo=Related To
+orderDate=Date
+orderVolume=Volume
+orderValue=Value
+publish=Publish
+explainPublish=Publish catalog to the web shop. 
+publishSucess=Publish of catalog to the web shop was successful.
 
 explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
 explainLanguages=The following languages are the languages present to customers to show the webshop. 
