Improved displaying orders: added displaying status and party information.
git-svn-id: file:///var/svn/claro-catalog@214 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -30,8 +30,10 @@ properties=Properties
 parents=Parents
 relatedTo=Related To
 orderDate=Date
+orderCustomer=Customer
 orderVolume=Volume
 orderValue=Value
+orderStatus=Status
 publish=Publish
 explainPublish=Publish catalog to the web shop. 
 publishSucess=Publish of catalog to the web shop was successful.
