- Fixed bug of incorrect index when showing individual product. - Hide product table when no products in list. - Improved updating cache when saving product and product group. - Change layout orders from splitpanel to deck panel. - Added order details, date, user and state to product order detail page. - Added update order state.
git-svn-id: file:///var/svn/claro-catalog@220 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -15,6 +15,7 @@ inheritedProperties=Inherited Properties
 newProduct=New Product
 noProductsInGroup=No products in this group
 backToProductOverview=&laquo; Back to product overview
+backToOrdersOverview=&laquo; Back to orders overview
 loading=Loading...
 upload=Upload...
 uploadFile=Upload file
@@ -47,6 +48,7 @@ productSaved=Product saved.
 productDeleted=Product deleted.
 productGroupSaved=Group {0} saved.
 navigationSaved=Navigation changes saved.
+orderStatusUpdated=Order status updated.
 fileUploaded=File {0} uploaded.
 languagesSaved=Languages updated.
 editEnumTitle=Click to add/remove enums fields.
