Changed displaying properties from tab to list view.
git-svn-id: file:///var/svn/claro-catalog@222 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -33,7 +33,7 @@ relatedTo=Related To
 orderDate=Date
 orderCustomer=Customer
 orderVolume=Volume
-orderValue=Value
+orderPrice=Price
 orderStatus=Status
 publish=Publish
 explainPublish=Publish catalog to the web shop. 
