Added temporary disable of save button when save in progress on product and group.
git-svn-id: file:///var/svn/claro-catalog@230 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -24,6 +24,7 @@ deletePropertyQuestion=Do you want to delete the Property? (Save Group to commit
 deleteProductQuestion=Do you want to delete the product?
 propertiesFrom=Properties from {0}
 save=Save
+saving=Saving...
 cancel=Cancel
 ok=Ok
 noValue=<no value>
