Fixed 139: Cosmetic changes group page.
git-svn-id: file:///var/svn/claro-catalog@232 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -1,4 +1,3 @@
-
 add=Add
 catalog=Catalog
 navigation=Navigation
@@ -29,6 +28,7 @@ cancel=Cancel
 ok=Ok
 noValue=<no value>
 properties=Properties
+propertyValues=Property Values
 parents=Parents
 relatedTo=Related To
 orderDate=Date
@@ -39,7 +39,7 @@ orderStatus=Status
 publish=Publish
 explainPublish=Publish catalog to the web shop. 
 publishSucess=Publish of catalog to the web shop was successful.
-
+noProperties=Group {0} has no defined properties.
 explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
 explainLanguages=The following languages are the languages present to customers to show the webshop. 
 explainEnums=Manage the enumeration list. 
