#143: Order filter, added order filter that automatically runs when selected. should still add loading sign when server communication in progress, and message when results returned is zero.
git-svn-id: file:///var/svn/claro-catalog@235 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -53,6 +53,7 @@ orderStatusUpdated=Order status updated.
 fileUploaded=File {0} uploaded.
 languagesSaved=Languages updated.
 editEnumTitle=Click to add/remove enums fields.
+filter=Filter:
 
 name=Name
 type=Type
