--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/client/i18n/I18NCatalogXS.properties
@@ -1,18 +1,20 @@
 add=Add
 catalog=Catalog
+taxonomy=Taxonomy
 navigation=Navigation
 promotions=Promotions
 orders=Orders
 settings=Settings
 todo=<h3>To be Configured. Pending Customer Requirements.</h3>
 products=Products
+allProducts=All Products
 group=Group
 containsProducts=Group has products: 
 newGroup=New Group
 saveChanges=Save Changes
 inheritedProperties=Inherited Properties
 newProduct=New Product
-noProductsInGroup=No products in this group
+noProducts=No products found
 backToProductOverview=&laquo; Back to product overview
 backToOrdersOverview=&laquo; Back to orders overview
 loading=Loading...
@@ -22,6 +24,7 @@ deletePromotionQuestion=Do you want to delete the promotion?
 deletePropertyQuestion=Do you want to delete the Property? (Save Group to commit changes).
 deleteProductQuestion=Do you want to delete the product?
 propertiesFrom=Properties from {0}
+refresh=Refresh
 save=Save
 saving=Saving...
 cancel=Cancel
@@ -36,13 +39,17 @@ orderCustomer=Customer
 orderVolume=Volume
 orderPrice=Price
 orderStatus=Status
+orderDateDetail=Order Date:
+orderCustomerDetail=Customer:
+orderStatusDetail=Order Status:
 publish=Publish
 explainPublish=Publish catalog to the web shop. 
 publishSucess=Publish of catalog to the web shop was successful.
 noProperties=Group {0} has no defined properties.
 explainNavigationList=The list below are the top level groups used as the starting point for the navigation structure in the web shop.
 explainLanguages=The following languages are the languages present to customers to show the webshop. 
-explainEnums=Manage the enumeration list. 
+explainEnums=Manage the enumeration list.
+explainOwnerGroup=The product is part of the following group: 
 promotionSaved=Promotion saved.
 promotionDeleted=Promotion deleted.
 productSaved=Product saved.
