git-svn-id: file:///var/svn/claro-catalog@478 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -7,6 +7,8 @@ promotions=Promotions
 orders=Orders
 settings=Settings
 todo=<h3>To be Configured. Pending Customer Requirements.</h3>
+price=Price
+product=Product
 products=Products
 allProducts=All Products
 category=Category
