git-svn-id: file:///var/svn/claro-catalog@492 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -22,6 +22,7 @@ noProducts=No products found
 backToProductOverview=&laquo; Back to product overview
 backToOrdersOverview=&laquo; Back to orders overview
 loading=Loading...
+loadingProductDetails=Loading product details...
 upload=upload
 uploadFile=upload file
 deletePromotionQuestion=Do you want to delete the promotion?
@@ -66,6 +67,8 @@ languagesSaved=Languages updated.
 editEnumTitle=Click to add/remove enums fields.
 filter=Filter:
 
+filterMessage=Search results for <b>{0}</b>
+
 name=Name
 type=Type
 value=Value
@@ -79,6 +82,13 @@ categories=Categories
 
 productsIn=Products in Category {0}
 productDetailsOf=Product Details Of {0}
+
+loadingProducts=loading products
+
+failureRetryingMessage=Failed to {0}, retrying... attempt #{1}
+failureMessage=Failed to {0}, press reload in browser to continue...
+internalFailureRetryingMessage=Internal failure, retrying... attempt #{0}
+internalFailureMessage=Internal Failure, press reload in browser to continue...
 
 up=Up
 down=Down
