git-svn-id: file:///var/svn/claro-catalog@508 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -18,7 +18,7 @@ newCategory=New Category
 saveChanges=Save Changes
 inheritedProperties=Inherited Properties
 newProduct=New Product
-noProducts=No products found
+noProductsFound=No products found
 backToProductOverview=&laquo; Back to product overview
 backToOrdersOverview=&laquo; Back to orders overview
 loading=Loading...
