git-svn-id: file:///var/svn/claro-catalog@526 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -1,4 +1,5 @@
 add=Add
+addCategoryFilter=Add Category...
 catalog=Catalog
 shop=Shop
 taxonomy=Taxonomy
@@ -94,4 +95,5 @@ up=Up
 down=Down
 
 containedProducts=Products ({0})
+clearValue=clear
  
