git-svn-id: file:///var/svn/claro-catalog@538 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -23,7 +23,7 @@ noProductsFound=No products found
 backToProductOverview=&laquo; Back to product overview
 backToOrdersOverview=&laquo; Back to orders overview
 loading=Loading...
-loadingProductDetails=Loading product details...
+loadingProductDetails=Loading product details
 upload=upload
 uploadFile=upload file
 deletePromotionQuestion=Do you want to delete the promotion?
@@ -86,8 +86,8 @@ productDetailsOf=Product Details Of {0}
 
 loadingProducts=loading products
 
-failureRetryingMessage=Failed to {0}, retrying... attempt #{1}
-failureMessage=Failed to {0}, press reload in browser to continue...
+failureRetryingMessage={0} failed, retrying... attempt #{1}
+failureMessage={0} failed, press reload in browser to continue...
 internalFailureRetryingMessage=Internal failure, retrying... attempt #{0}
 internalFailureMessage=Internal Failure, press reload in browser to continue...
 
@@ -97,3 +97,6 @@ down=Down
 containedProducts=Products ({0})
 clearValue=clear
  
+ 
+loadingImportSources=Loading import sources
+importSource=Import source 
