git-svn-id: file:///var/svn/claro-catalog@539 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -96,6 +96,11 @@ down=Down
 
 containedProducts=Products ({0})
 clearValue=clear
+
+addCategoriesLink=Add category...
+addCategoryProductDetailsTooltip=Add product {0} to a category. 
+removeCategoryProductDetailsTooltip=Remove product from category {0}	
+removeCategoryFilterTooltip=Remove category {0} from filter
  
  
 loadingImportSources=Loading import sources
