git-svn-id: file:///var/svn/claro-catalog@541 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -104,4 +104,6 @@ removeCategoryFilterTooltip=Remove category {0} from filter
  
  
 loadingImportSources=Loading import sources
-importSource=Import source 
+importSource=Import source
+newImportSource=create import source 
+creatingImportSource=creating import source 
