git-svn-id: file:///var/svn/claro-catalog@548 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -107,3 +107,11 @@ loadingImportSources=Loading import sources
 importSource=Import source
 newImportSource=create import source 
 creatingImportSource=creating import source 
+
+name=Name
+lastStatus=Last status
+success=Success
+failed=Failed
+notRun=Not run
+log=Log
+importUrl=Url
