git-svn-id: file:///var/svn/claro-catalog@556 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -118,3 +118,6 @@ importUrl=Url
 showLog=show log
 addPropertyMapping=add mapping
 propertyMappings=Properties
+property=Property
+expression=Expression
+selectProperty=Select property
