--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -1,3 +1,5 @@
+importMenu = Import
+
 add=Add
 addCategoryFilter=Add Category...
 catalog=Catalog
@@ -117,8 +119,11 @@ notRun=Not run
 log=Log
 importUrl=Url
 showLog=show log
-addPropertyMapping=add mapping
+addPropertyMapping=add property
 propertyMappings=Properties
 property=Property
 expression=Expression
 selectProperty=Select property
+importUrlHelp=Url of file to import. Note that this is an expression, so make sure to use quotes, like \"file:///....\". 
+matchProperty=Match property
+matchPropertyHelp=Property that is used to match a product. Should be one of the properties defined below.
