git-svn-id: file:///var/svn/claro-catalog@573 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -127,3 +127,7 @@ selectProperty=Select property
 importUrlHelp=Url of file to import. Note that this is an expression, so make sure to use quotes, like \"file:///....\". 
 matchProperty=Match property
 matchPropertyHelp=Property that is used to match a product. Should be one of the properties defined below.
+
+savingProductDetailsStatus=Saving Product Details...
+savingProductDetailsFailedStatus=Saving Product Details... Failed!
+savingProductDetailsSuccessStatus=Saved
