git-svn-id: file:///var/svn/claro-catalog@574 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -131,3 +131,4 @@ matchPropertyHelp=Property that is used to match a product. Should be one of the
 savingProductDetailsStatus=Saving Product Details...
 savingProductDetailsFailedStatus=Saving Product Details... Failed!
 savingProductDetailsSuccessStatus=Saved
+atLeastOneCategory=Assign at least one category...
