git-svn-id: file:///var/svn/claro-catalog@589 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -26,6 +26,7 @@ backToProductOverview=&laquo; Back to product overview
 backToOrdersOverview=&laquo; Back to orders overview
 loading=Loading...
 loadingProductDetails=Loading product details
+loadingCategoryDetails=Loading category details
 upload=upload
 uploadFile=upload file
 deletePromotionQuestion=Do you want to delete the promotion?
@@ -86,6 +87,7 @@ categories=Categories
 productsIn=Products in Category {0}
 productDetailsOf=Product Details Of {0}
 
+loadingCategories=loading categories
 loadingProducts=loading products
 
 failureRetryingMessage={0} failed, retrying... attempt #{1}
@@ -99,7 +101,7 @@ down=Down
 containedProducts=Products ({0})
 clearValue=clear
 
-addCategoriesLink=Add category...
+addCategoriesLink=Add to category...
 addCategoryProductDetailsTooltip=Add product {0} to a category.
 categoryTreeRootName=Categories 
 removeCategoryProductDetailsTooltip=Remove product from category {0}	
@@ -152,8 +154,16 @@ definition=Definition
 refresh=refresh
 matchPropertyHelp=Property that is used to match a product. Should be one of the properties defined below.
 
+savingCategoryDetailsStatus=Saving Category Details...
+savingCategoryDetailsFailedStatus=Saving Category Details... Failed!
+savingCategoryDetailsSuccessStatus=Saved
+
 savingProductDetailsStatus=Saving Product Details...
 savingProductDetailsFailedStatus=Saving Product Details... Failed!
 savingProductDetailsSuccessStatus=Saved
-atLeastOneCategory=Assign at least one category...
+
+propertySourceTooltip=Property {0} is defined on item {1}
+defaultValuesTab=Default Values
+propertyGroupsTab=Property Groups
+
 detailsLabel=Details
