git-svn-id: file:///var/svn/claro-catalog@592 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -112,9 +112,9 @@ loadingImportSourcesMessage=Loading import sources
 importSourceLabel=Import source
 newImportSourceLink=create import source 
 creatingImportSourceMessage=creating import source 
-importSourceNameHelp=
+importSourceNameHelp=Name of this import source
 importUrlLabel=Url
-importUrlHelp=Url of file to import. Note that this is an expression, so make sure to use quotes, like \"file:///....\". 
+importUrlHelp=Url of file to import. A file can be a reference to the filesystem, like C:\myimportfile.csv, or can be a url like <b>ftp://myserver/myfolder/myimportfile.csv</b>. 
 multiFileImportLabel=Multi-file import
 multiFileImportHelp=Import consists of multiple files, each with a name relative to the import url
 fileFormatLink=file format
@@ -137,7 +137,7 @@ lastStatusLabel=Last status
 lastStatusHelp=Last status
 success=Success
 failed=Failed
-notRun=Not run
+notRunMessage=Not run
 log=Log
 showLogLink=show log
 addPropertyMapping=add property
@@ -161,9 +161,13 @@ savingCategoryDetailsSuccessStatus=Saved
 savingProductDetailsStatus=Saving Product Details...
 savingProductDetailsFailedStatus=Saving Product Details... Failed!
 savingProductDetailsSuccessStatus=Saved
-
 propertySourceTooltip=Property {0} is defined on item {1}
 defaultValuesTab=Default Values
 propertyGroupsTab=Property Groups
-
 detailsLabel=Details
+importNowLink=import now
+lastRunLabel=Last run
+lastRunUrlLabel=Url
+statusHeader=Status
+actionsHeader=Actions
+nameLabel=Name
