git-svn-id: file:///var/svn/claro-catalog@593 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -101,7 +101,9 @@ down=Down
 containedProducts=Products ({0})
 clearValue=clear
 
-addCategoriesLink=Add to category...
+addToCategoriesLink=Add to category...
+addParentCategoriesLink=Add parent category...
+addCategoriesLink=Add category...
 addCategoryProductDetailsTooltip=Add product {0} to a category.
 categoryTreeRootName=Categories 
 removeCategoryProductDetailsTooltip=Remove product from category {0}	
