git-svn-id: file:///var/svn/claro-catalog@595 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -171,5 +171,6 @@ importNowLink=import now
 lastRunLabel=Last run
 lastRunUrlLabel=Url
 statusHeader=Status
+healthHeader=Health
 actionsHeader=Actions
 nameLabel=Name
