git-svn-id: file:///var/svn/claro-catalog@597 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -116,20 +116,21 @@ newImportSourceLink=create import source
 creatingImportSourceMessage=creating import source 
 importSourceNameHelp=Name of this import source
 importUrlLabel=Url
-importUrlHelp=Url of file to import. A file can be a reference to the filesystem, like C:\myimportfile.csv, or can be a url like <b>ftp://myserver/myfolder/myimportfile.csv</b>. 
+importUrlHelp=Url of file to import. This Url is used for scheduled imports, or when "Import Now" is selected. A file can be a reference to the filesystem, like C:\myimportfile.csv, or can be a url like <b>ftp://myserver/myimportfile.csv</b>. 
 multiFileImportLabel=Multi-file import
 multiFileImportHelp=Import consists of multiple files, each with a name relative to the import url
 fileFormatLink=file format
 importRulesLink=rules
 importNowHelp=
 importNowButton=Import Now
+importFileButton=Import File...
 incrementalImportLabel=Incremental
-incrementalImportHelp=
+incrementalImportHelp=Incremental imports will add imported to previously imported data. A non-incremental import removes all data that was previously imported by the current import source.  
 sequentialImportNamesLabel=Sequential File Names
 sequentialImportNamesHelp=Import file names should have subsequent numbers, e.g. file1.zip, file2.zip. When a sequence is missing, the import will fail. Make sure to specify a * in the import url, e.g. file*.zip.
 orderedImportNamesLabel=Ordered File Names
 orderedImportNamesHelp=Import file names are ardered, e.g. file-20100811.zip, file-20100812.zip. All names larger than the last one will be processed. Make sure to specify a * in the import url, e.g. file-*.zip. The import url should denote a path on the filesystem.
-relativeImportUrlLabel=Relative file name
+relativeImportUrlLabel=Nested file name
 addNestedFileLink=add nested file
 multiFileTab=Multi-File
 notAMultiFileImportSourceMessage=This is not a multi-file import source
@@ -174,3 +175,6 @@ statusHeader=Status
 healthHeader=Health
 actionsHeader=Actions
 nameLabel=Name
+
+fileFormatTab=File Format
+selectNestedFileLabel=Nested file
