git-svn-id: file:///var/svn/claro-catalog@600 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -178,3 +178,12 @@ nameLabel=Name
 
 fileFormatTab=File Format
 selectNestedFileLabel=Nested file
+
+
+catalogMenu=Catalog
+taxonomyMenu=Taxonomy
+webshopMenu =Webshop
+dataExchangeMenu=Data Exchange
+campaignsMenu =Campaigns
+contentLibraryMenu=Content Library
+reportAndAnalysisMenu=Report and Analysis
