git-svn-id: file:///var/svn/claro-catalog@603 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -165,6 +165,7 @@ savingProductDetailsStatus=Saving Product Details...
 savingProductDetailsFailedStatus=Saving Product Details... Failed!
 savingProductDetailsSuccessStatus=Saved
 propertySourceTooltip=Property {0} is defined on item {1}
+unknownPropertySourceTooltip=Source of property {0} is unknown
 defaultValuesTab=Default Values
 propertyGroupsTab=Property Groups
 detailsLabel=Details
@@ -187,3 +188,4 @@ dataExchangeMenu=Data Exchange
 campaignsMenu =Campaigns
 contentLibraryMenu=Content Library
 reportAndAnalysisMenu=Report and Analysis
+newChildCategory=add subcategory...
