git-svn-id: file:///var/svn/claro-catalog@607 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -189,3 +189,4 @@ campaignsMenu =Campaigns
 contentLibraryMenu=Content Library
 reportAndAnalysisMenu=Report and Analysis
 newChildCategory=add subcategory...
+noCategoriesAvailable=No categories available
