git-svn-id: file:///var/svn/claro-catalog@608 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -1,7 +1,7 @@
 importMenu = Import
 
 add=Add
-addCategoryFilter=Add Category...
+addCategoryFilter=Add Category to filter
 catalog=Catalog
 shop=Shop
 taxonomy=Taxonomy
