git-svn-id: file:///var/svn/claro-catalog@610 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -118,9 +118,9 @@ importSourceNameHelp=Name of this import source
 importUrlLabel=Url
 importUrlHelp=Url of file to import. This Url is used for scheduled imports, or when "Import Now" is selected. A file can be a reference to the filesystem, like C:\myimportfile.csv, or can be a url like <b>ftp://myserver/myimportfile.csv</b>. 
 multiFileImportLabel=Multi-file import
-multiFileImportHelp=Import consists of multiple files, each with a name relative to the import url
+multiFileImportHelp=Import consists of multiple files, each with a name relative to the import url. The import url can point to a zip-file or a directory.
 fileFormatLink=file format
-importRulesLink=rules
+dataMappingsLink=data mapping
 importNowHelp=
 importNowButton=Import Now
 importFileButton=Import File...
@@ -153,9 +153,9 @@ matchPropertyHelp=Property that is used to match a product. Should be one of the
 jobStatus=status
 history=History
 pleaseWait=Please wait...
-definition=Definition
 refresh=refresh
 matchPropertyHelp=Property that is used to match a product. Should be one of the properties defined below.
+dataMappingTab=Data Mapping
 
 savingCategoryDetailsStatus=Saving Category Details...
 savingCategoryDetailsFailedStatus=Saving Category Details... Failed!
@@ -179,6 +179,7 @@ nameLabel=Name
 
 fileFormatTab=File Format
 selectNestedFileLabel=Nested file
+selectNestedFileHelp=Select nested file in this multi-file import
 
 
 catalogMenu=Catalog
@@ -187,6 +188,16 @@ webshopMenu =Webshop
 dataExchangeMenu=Data Exchange
 campaignsMenu =Campaigns
 contentLibraryMenu=Content Library
-reportAndAnalysisMenu=Report and Analysis
+reportAndAnalysisMenu=Reporting
+fileFormatLabel=File Format
+fileFormatHelp=Please, choose file format
+headerLineLabel=Header Line
+fieldSeparatorLabel=Field Separator
+charsetLabel=Character Set
+headerLineHelp=Indicates whether the cvs file has a header line
+fieldSeparatorHelp=
+charsetHelp=
 newChildCategory=add subcategory...
 noCategoriesAvailable=No categories available
+selectCategoryLabel=Category
+selectCategoryHelp=Select the category in which products will be imported
