git-svn-id: file:///var/svn/claro-catalog@619 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -201,5 +201,9 @@ newChildCategory=add subcategory...
 noCategoriesAvailable=No categories available
 selectCategoryLabel=Category
 selectCategoryHelp=Select the category in which products will be imported
+removeImportSourceLink=remove import source
+yesButton=Yes
+noButton=No
+removeImportSourceConfirmationMessage=Remove this import source?
 noProductNameSet=productname not set
 noCategoryNameSet=categoryname not set
