git-svn-id: file:///var/svn/claro-catalog@622 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -207,3 +207,6 @@ noButton=No
 removeImportSourceConfirmationMessage=Remove this import source?
 noProductNameSet=productname not set
 noCategoryNameSet=categoryname not set
+shopNameLabel=Shop
+shopUrlLabel=Url
+newWebshopLink=New Web Shop
