--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -210,3 +210,5 @@ noCategoryNameSet=categoryname not set
 shopNameLabel=Shop
 shopUrlLabel=Url
 newWebshopLink=New Web Shop
+removeImportedDataMessage=This will delete all data that was imported by this import source. Continue?
+removeImportedDataButton=Delete Import Data
