git-svn-id: file:///var/svn/claro-catalog@631 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -212,3 +212,18 @@ shopUrlLabel=Url
 newWebshopLink=New Web Shop
 removeImportedDataMessage=This will delete all data that was imported by this import source. Continue?
 removeImportedDataButton=Delete Import Data
+
+loadingWebShopsMessage=Loading webshops
+addLanguageLink=Add language...
+noLanguagesAvailable=No languages available
+shopNameHelp=Name of the shop
+shopUrlPrefixLabel=URL Prefix
+urlPrefixHelp=The URL that the shop will be deployed to.
+defaultlanguageLabel=Default Language
+defaultLanguageHelp=The language that will used by default for the shop.
+shopLanguagesLabel=Languages
+shopLanguagesHelp=The languages that a shop will be available in.
+removeShopConfirmationMessage=Are you sure you want to permanently remove shop {0}
+removeShopLink=remove shop...
+loadingWebShopsAction=loading webshops
+defaultLanguageName=Default
