git-svn-id: file:///var/svn/claro-catalog@633 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -92,6 +92,7 @@ loadingProducts=loading products
 
 failureRetryingMessage={0} failed, retrying... attempt #{1}
 failureMessage={0} failed, press reload in browser to continue...
+successMessage={0} successful
 internalFailureRetryingMessage=Internal failure, retrying... attempt #{0}
 internalFailureMessage=Internal Failure, press reload in browser to continue...
 
@@ -227,3 +228,4 @@ removeShopConfirmationMessage=Are you sure you want to permanently remove shop {
 removeShopLink=remove shop...
 loadingWebShopsAction=loading webshops
 defaultLanguageName=Default
+savingWebShopsAction=saving
