git-svn-id: file:///var/svn/claro-catalog@653 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -185,7 +185,8 @@ selectNestedFileHelp=Select nested file in this multi-file import
 
 catalogMenu=Catalog
 taxonomyMenu=Taxonomy
-webshopMenu =Webshop
+webshopMenu=Webshop
+ordersMenu=Orders
 dataExchangeMenu=Data Exchange
 campaignsMenu =Campaigns
 contentLibraryMenu=Content Library
@@ -229,3 +230,30 @@ removeShopLink=remove shop...
 loadingWebShopsAction=loading webshops
 defaultLanguageName=Default
 savingWebShopsAction=saving
+
+orderCanceledStatus=Canceled
+orderClosedStatus=Closed
+orderCompleteStatus=Complete
+orderInShoppingCartStatus=In Shopping Cart
+orderOnHoldStatus=On Hold
+orderPendingPaymentStatus=Payment Pending
+orderProcessingStatus=Processing
+orderReceivedPaymentStatus=Payment Received
+orderShippedStatus=Shipped
+
+orderShopNameLabel=Shop
+orderDateLabel=Order Date
+orderStatusLabel=Status
+loadingOrdersMessage=Loading orders
+removeOrderConfirmationMessage=Are you sure you want to permanently remove order dated {0}
+removeOrderLink=remove order...
+loadingOrdersAction=loading orders
+savingOrdersAction=saving
+newOrderLink=New Order
+orderUserLabel=User
+orderAmountPaidLabel=Amount Paid
+orderProductOrderTab=Product Orders
+orderHistoryTab=Order History
+
+
+
