git-svn-id: file:///var/svn/claro-catalog@654 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -254,6 +254,5 @@ orderUserLabel=User
 orderAmountPaidLabel=Amount Paid
 orderProductOrderTab=Product Orders
 orderHistoryTab=Order History
-
-
+orderFilter=Filter
 
