--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -185,8 +185,7 @@ selectNestedFileHelp=Select nested file in this multi-file import
 
 catalogMenu=Catalog
 taxonomyMenu=Taxonomy
-webshopMenu=Webshop
-ordersMenu=Orders
+webshopMenu =Webshop
 dataExchangeMenu=Data Exchange
 campaignsMenu =Campaigns
 contentLibraryMenu=Content Library
@@ -217,6 +216,7 @@ removeImportedDataButton=Delete Import Data
 
 loadingWebShopsMessage=Loading webshops
 addLanguageLink=Add language...
+setLanguageLink=Set language...
 noLanguagesAvailable=No languages available
 shopNameHelp=Name of the shop
 shopUrlPrefixLabel=URL Prefix
@@ -230,6 +230,8 @@ removeShopLink=remove shop...
 loadingWebShopsAction=loading webshops
 defaultLanguageName=Default
 savingWebShopsAction=saving
+topLevelCategoriesLabel=Top-level Categories
+topLevelCategoriesHelp=These categories Are the starting points for navigation in the web shop
 
 orderCanceledStatus=Canceled
 orderClosedStatus=Closed
@@ -255,4 +257,3 @@ orderAmountPaidLabel=Amount Paid
 orderProductOrderTab=Product Orders
 orderHistoryTab=Order History
 orderFilter=Filter
-
