git-svn-id: file:///var/svn/claro-catalog@661 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -187,6 +187,7 @@ catalogMenu=Catalog
 taxonomyMenu=Taxonomy
 webshopMenu =Webshop
 dataExchangeMenu=Data Exchange
+ordersMenu=Orders
 campaignsMenu =Campaigns
 contentLibraryMenu=Content Library
 reportAndAnalysisMenu=Reporting
