--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -258,3 +258,7 @@ orderAmountPaidLabel=Amount Paid
 orderProductOrderTab=Product Orders
 orderHistoryTab=Order History
 orderFilter=Filter
+publishToPreviewButton=Publish to Preview
+publishToPreviewConfirmation=Are you sure to publish all catalog data to preview shops?
+publishPreviewToProductionButton=Publish Preview to Production
+publishPreviewToProductionConfirmation=Are you sure to publish all preview catalog-data to production shops?
