git-svn-id: file:///var/svn/claro-catalog@702 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -262,3 +262,9 @@ publishToPreviewButton=Publish to Preview
 publishToPreviewConfirmation=Are you sure to publish all catalog data to preview shops?
 publishPreviewToProductionButton=Publish Preview to Production
 publishPreviewToProductionConfirmation=Are you sure to publish all preview catalog-data to production shops?
+promotionsTab=Promotions
+shippingOptionsTab=Shipping
+shippingCostsLabel=Shipping Costs
+shippingCostsHelp=Regular Shipping Costs
+expressDeliveryChargeLabel=Express Delivery Charge
+expressDeliveryChargeHelp=Additional costs for express deliveries
