git-svn-id: file:///var/svn/claro-catalog@713 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -162,6 +162,12 @@ savingCategoryDetailsStatus=Saving Category Details...
 savingCategoryDetailsFailedStatus=Saving Category Details... Failed!
 savingCategoryDetailsSuccessStatus=Saved
 
+removeCategoryConfirmationMessage=Are you sure you want to permanently remove category {0}
+removeCategoryLink=remove category...
+
+removeProductConfirmationMessage=Are you sure you want to permanently remove product {0}
+removeProductLink=remove product...
+
 savingProductDetailsStatus=Saving Product Details...
 savingProductDetailsFailedStatus=Saving Product Details... Failed!
 savingProductDetailsSuccessStatus=Saved
