git-svn-id: file:///var/svn/claro-catalog@723 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -274,3 +274,5 @@ shippingCostsLabel=Shipping Costs
 shippingCostsHelp=Regular Shipping Costs
 expressDeliveryChargeLabel=Express Delivery Charge
 expressDeliveryChargeHelp=Additional costs for express deliveries
+addPromotionLink=add promotion...
+promotionsLink=promotion {0}
