git-svn-id: file:///var/svn/claro-catalog@756 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
+++ b/trunk/catalog-manager/src/main/java/claro/catalog/manager/client/i18n/I18NCatalog.properties
@@ -103,6 +103,8 @@ containedProducts=Products ({0})
 clearValue=clear
 
 addToCategoriesLink=Add to category...
+addToProductsLink=Add product...
+addToItemsLink=Add product or category...
 addParentCategoriesLink=Add parent category...
 addCategoriesLink=Add category...
 addCategoryProductDetailsTooltip=Add product {0} to a category.
